Try to make 3 columns

--- a/css/styles.css
+++ b/css/styles.css
@@ -10,4 +10,12 @@ p {
     font-size: medium;
     background-color: darkcyan;
     color: cornsilk;
+    float: left;
+    width: 33.33%;
+}
+
+div:after {
+    content: "";
+    display: table;
+    clear: both;
 }
